--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="list">
 
-            <div class="item" style="background-image: url(https://media.discordapp.net/attachments/600390534904676381/1335869040572239904/IMG_4778.jpg?ex=67a1bc7e&is=67a06afe&hm=6bad63a3e2120e158c7b6f6998a6f90beceeab32fe44bfa739dce0b7a373f696&=&format=webp&width=1440&height=665);">
+            <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/image1.jpg?raw=true);">
                 <div class="content">
                     <div class="title">01</div>
                     <div class="name">Letters</div>
