--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
 
-            <div class="item" style="background-image: url(image/owl1.jpg);">
+            <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/memories.jpg?raw=true);">
                 
                 <div class="content">
                     <div class="title">02</div>
