--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             </div>
 
-            <div class="item" style="background-image: url(image/crow.jpg);">
+            <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/Timeline.jpg?raw=true);">
 
                 <div class="content">
                     <div class="title">03</div>
