--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="">Letters</a>
             <a href="">Memories</a>
             <a href="">Timeline</a>
-            <a href="">Our House</a>
+            <a href="">Our Home</a>
             <a href="">Open When</a>
         </nav>
 
@@ -65,11 +65,11 @@
 
             </div>
 
-            <div class="item" style="background-image: url(image/butterfly1.jpeg);">
+            <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/Home.jpg?raw=true;">
                 
                 <div class="content">
                     <div class="title">04</div>
-                    <div class="name">Our House</div>
+                    <div class="name">Our Home</div>
                     <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa similique consequuntur, reprehenderit dicta repudiandae.</div>
                     <div class="btn">
                         <button>See More</button>
