--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             </div>
 
-            <div class="item" style="background-image: url(image/owl2.jpg);">
+            <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/Little%20Letters.jpg?raw=true);">
                 
                 <div class="content">
                     <div class="title">05</div>
