--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="content">
                     <div class="title">&hearts;</div>
-                    <div class="name">Memories</div>
+                    <div class="name">Timeline</div>
                     <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa similique consequuntur, reprehenderit dicta repudiandae.</div>
                     <div class="btn">
                         <button>Click Here Babo</button>
