--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="name">Letters</div>
                     <div class="des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa similique consequuntur, reprehenderit dicta repudiandae.</div>
                     <div class="btn">
-                        <button>Click Here Babo</button>
+                        <button>Click Me Babo</button>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,6 @@
                 </div>
 
             </div>
-
         </div>
 
         <!--next prev button-->
