--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>To My Sun and Stars</title>
 
     <link rel="stylesheet" href="style.css">
-    <meta http-equiv="refresh" content="0; url=landing_page.html">
+    <meta http-equiv="refresh" content="0; url=landingpage.html">
 
 </head>
 <body>
