--- a/yes.html
+++ b/yes.html
@@ -22,7 +22,7 @@
             // Ask for the second confirmation
             const userConfirmed = confirm("Are you sure you want to proceed?");
             if (userConfirmed) {
-                window.location.href = "index.html";  // Redirect to the main page
+                window.location.href = "home.html";  // Redirect to the main page
             }
         }
     </script>
