--- a/yes.html
+++ b/yes.html
@@ -19,10 +19,10 @@
 
     <script>
         function finalConfirmation() {
-            // Ask for the second confirmation
-            const userConfirmed = confirm("Are you sure you want to proceed?");
-            if (userConfirmed) {
-                window.location.href = "home.html";  // Redirect to the main page
+    // Ask for the second confirmation
+    const userConfirmed = confirm("Are you sure you want to proceed?");
+    if (userConfirmed) {
+        window.location.replace("home.html");
             }
         }
     </script>
