--- a/yes.html
+++ b/yes.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div>
-            <h1 class="header_text">YAYYYYYY!!</h1>
+            <h1 class="header_text">YAYYYYYY!! Are you sure you want to be my Valentine?</h1>
         </div>
         <div class="gif_container">
             <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
