--- a/yes.html
+++ b/yes.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div>
-            <h1 class="header_text">YAYYYYYY!! Are you sure you want to be my Valentine?</h1>
+            <h1 class="header_text">YAYYYYYY!! Are you sure you?</h1>
         </div>
         <div class="gif_container">
             <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
@@ -19,7 +19,7 @@
 
     <script>
        function finalConfirmation() {
-    const userConfirmed = confirm("Are you sure you want to proceed?");
+    const userConfirmed = confirm("Are you sure you want to be stuck with her forever?");
     if (userConfirmed) {
         // This will take the user to the new page
         window.location.assign("home.html");
