--- a/yes.html
+++ b/yes.html
@@ -6,14 +6,14 @@
 <body>
     <div class="container">
         <div>
-            <h1 class="header_text">YAYYYYYY!! Are you sure you?</h1>
+            <h1 class="header_text">YAYYYYYY!! Do you promise with a hook and a kiss?</h1>
         </div>
         <div class="gif_container">
             <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
         </div>
         <div class="buttons">
             <!-- Button to confirm and redirect to index.html -->
-            <button class="btn" id="yesButton" onclick="finalConfirmation()">I'm sure Babooo!!!</button>
+            <button class="btn" id="yesButton" onclick="finalConfirmation()">I promise with a hook and a kiss!!! MUAH MUAH MUAH MUAH</button>
         </div>
     </div>
 
