--- a/yes.html
+++ b/yes.html
@@ -9,7 +9,7 @@
             <h1 class="header_text">YAYYYYYY!! Do you promise with a hook and a kiss?</h1>
         </div>
         <div class="gif_container">
-            <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
+            <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/flowers.gif?raw=true" alt="Cute animated illustration">
         </div>
         <div class="buttons">
             <!-- Button to confirm and redirect to index.html -->
