--- a/letters.html
+++ b/letters.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book</title>
     <link rel="stylesheet" href="letters.css">
+    <script src="https://kit.fontawesome.com/1cad54f882.js"
+        crossorigin="anonymous"></script>
 </head>
 <body>
    <body>
