--- a/letters.html
+++ b/letters.html
@@ -10,6 +10,19 @@
         crossorigin="anonymous"></script>
 </head>
 <body>
+    <header>
+
+        <nav>
+            <a href="" class="active">Home</a>
+            <a href="">Letters</a>
+            <a href="">Memories</a>
+            <a href="">Timeline</a>
+            <a href="">Our Home</a>
+            <a href="">Open When</a>
+        </nav>
+
+    </header>
+
    <body>
     <input type="checkbox" id="checkbox-cover">
     <input type="checkbox" id="checkbox-page1">
