--- a/letters.html
+++ b/letters.html
@@ -4,26 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book</title>
+    <title>Letters</title>
     <link rel="stylesheet" href="letters.css">
-    <script src="https://kit.fontawesome.com/1cad54f882.js"
-        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1cad54f882.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-
         <nav>
-            <a href="" class="active">Home</a>
-            <a href="">Letters</a>
-            <a href="">Memories</a>
-            <a href="">Timeline</a>
-            <a href="">Our Home</a>
-            <a href="">Open When</a>
+            <a href="index.html" class="">Home</a> <!-- Change the link to 'index.html' for the home page -->
+            <a href="letters.html" class="active">Letters</a> <!-- Active page is 'Letters' -->
+            <a href="memories.html" class="">Memories</a> <!-- Change the link to 'memories.html' for memories -->
+            <a href="timeline.html" class="">Timeline</a> <!-- Change the link to 'timeline.html' for timeline -->
+            <a href="our_home.html" class="">Our Home</a> <!-- Change the link to 'our_home.html' for Our Home -->
+            <a href="open_when.html" class="">Open When</a> <!-- Change the link to 'open_when.html' for Open When -->
         </nav>
-
     </header>
 
-   <body>
+    <!-- Book Content -->
     <input type="checkbox" id="checkbox-cover">
     <input type="checkbox" id="checkbox-page1">
     <input type="checkbox" id="checkbox-page2">
@@ -32,6 +29,7 @@
         <div class="cover">
             <label for="checkbox-cover"></label>
         </div>
+
         <div class="page" id="page1">
             <div class="front-page">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil magni laudantium beatae quia. Recusandae, fuga quas consectetur perferendis aperiam esse velit veniam ducimus? Quisquam consequatur perferendis quidem quia, recusandae ab!</p>
@@ -42,6 +40,7 @@
                 <label class="prev" for="checkbox-page1"><i class="fas fa-chevron-left"></i></label>
             </div>
         </div>
+
         <div class="page" id="page2">
             <div class="front-page">
                 <h2>Page 2</h2>
@@ -53,16 +52,16 @@
                 <label class="prev" for="checkbox-page2"><i class="fas fa-chevron-left"></i></label>
             </div>
         </div>
+
         <div class="page" id="page3">
             <div class="front-page">
                 <h2>Page 3</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil magni laudantium beatae quia. Recusandae, fuga quas consectetur perferendis aperiam esse velit veniam ducimus? Quisquam consequatur perferendis quidem quia, recusandae ab!</p>
             </div>
         </div>
+
         <div class="back-cover"></div>
     </div>
-</body>
-     
 
 </body>
 </html>
