--- a/letters.html
+++ b/letters.html
@@ -2,21 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Letters</title>
-    <link rel="stylesheet" href="letters.css">
+
+    <link rel="stylesheet" href="style.css"> <!-- Make sure you link to style.css here -->
+
     <script src="https://kit.fontawesome.com/1cad54f882.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    
+    <!-- Header -->
     <header>
         <nav>
-            <a href="index.html" class="">Home</a> <!-- Change the link to 'index.html' for the home page -->
-            <a href="letters.html" class="active">Letters</a> <!-- Active page is 'Letters' -->
-            <a href="memories.html" class="">Memories</a> <!-- Change the link to 'memories.html' for memories -->
-            <a href="timeline.html" class="">Timeline</a> <!-- Change the link to 'timeline.html' for timeline -->
-            <a href="our_home.html" class="">Our Home</a> <!-- Change the link to 'our_home.html' for Our Home -->
-            <a href="open_when.html" class="">Open When</a> <!-- Change the link to 'open_when.html' for Open When -->
+            <a href="index.html" class="">Home</a> <!-- Adjust to the proper home page link -->
+            <a href="letters.html" class="active">Letters</a> <!-- Active link for Letters page -->
+            <a href="memories.html" class="">Memories</a>
+            <a href="timeline.html" class="">Timeline</a>
+            <a href="our_home.html" class="">Our Home</a>
+            <a href="open_when.html" class="">Open When</a>
         </nav>
     </header>
 
