--- a/letters.html
+++ b/letters.html
@@ -13,8 +13,8 @@
     <header>
 
         <nav>
-            <a href="" class="active">Home</a>
-            <a href="">Letters</a>
+            <a href="">Home</a>
+            <a href="" class="active">Letters</a>
             <a href="">Memories</a>
             <a href="">Timeline</a>
             <a href="">Our Home</a>
