--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 
         <nav>
             <a href="" class="active">Home</a>
-            <a href="">Letters</a>
+            <a href="letters.html">Letters</a>
             <a href="">Memories</a>
             <a href="">Timeline</a>
             <a href="">Our Home</a>
