--- a/letters.html
+++ b/letters.html
@@ -13,7 +13,7 @@
     <header>
 
         <nav>
-            <a href="">Home</a>
+            <a href="home.html">Home</a>
             <a href="" class="active">Letters</a>
             <a href="">Memories</a>
             <a href="">Timeline</a>
