--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <header>
 
         <nav>
-            <a href="" class="active">Home</a>
+            <a href="home.html" class="active">Home</a>
             <a href="letters.html">Letters</a>
             <a href="">Memories</a>
             <a href="">Timeline</a>
