--- a/letters.html
+++ b/letters.html
@@ -14,7 +14,7 @@
 
         <nav>
             <a href="home.html">Home</a>
-            <a href="" class="active">Letters</a>
+            <a href="letters.html" class="active">Letters</a>
             <a href="">Memories</a>
             <a href="">Timeline</a>
             <a href="">Our Home</a>
