--- a/letters.html
+++ b/letters.html
@@ -13,8 +13,8 @@
     <header>
 
         <nav>
-            <a href="home.html">Home</a>
-            <a href="letters.html" class="active">Letters</a>
+            <a href="" class="active">Home</a>
+            <a href="">Letters</a>
             <a href="">Memories</a>
             <a href="">Timeline</a>
             <a href="">Our Home</a>
@@ -62,7 +62,7 @@
         <div class="back-cover"></div>
     </div>
 </body>
-     
+
 
 </body>
 </html>
