--- a/letters.html
+++ b/letters.html
@@ -61,7 +61,7 @@
         </div>
         <div class="back-cover"></div>
     </div>
-        <script src="./script.js"></script>
+        <script src="heartrain.js"></script>
 </body>
 
 
