--- a/letters.html
+++ b/letters.html
@@ -34,7 +34,7 @@
         </div>
         <div class="page" id="page1">
             <div class="front-page">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil magni laudantium beatae quia. Recusandae, fuga quas consectetur perferendis aperiam esse velit veniam ducimus? Quisquam consequatur perferendis quidem quia, recusandae ab!</p>
+                <p>To my Sun and Stars</p>
                 <label class="next" for="checkbox-page1"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
@@ -45,7 +45,8 @@
         <div class="page" id="page2">
             <div class="front-page">
                 <h2>Page 2</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil magni laudantium beatae quia. Recusandae, fuga quas consectetur perferendis aperiam esse velit veniam ducimus? Quisquam consequatur perferendis quidem quia, recusandae ab!</p>
+                <p>Happy Valentines Day Babo!! <br> <br>
+                By the time you're reading this, I probably finished the website but currently, I am nowhere done in finishing this WAAAAAAAA. I am lucky enough to spend my first Valentine Day with you.</p>
                 <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
