--- a/letters.html
+++ b/letters.html
@@ -34,7 +34,7 @@
         </div>
         <div class="page" id="page1">
             <div class="front-page">
-                <p>To my Sun and Stars</p>
+                <p><br><br><br><br><br>To my Sun and Stars</p>
                 <label class="next" for="checkbox-page1"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
