--- a/letters.html
+++ b/letters.html
@@ -44,7 +44,7 @@
         </div>
         <div class="page" id="page2">
             <div class="front-page">
-                <h2>Page 2</h2>
+                <h2>Feb 14, 2025</h2>
                 <p>Happy Valentines Day Babo!! <br> <br>
                 By the time you're reading this, I probably finished the website but currently, I am nowhere done in finishing this WAAAAAAAA. I am lucky enough to spend my first Valentine Day with you.</p>
                 <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
