--- a/letters.html
+++ b/letters.html
@@ -34,7 +34,7 @@
         </div>
         <div class="page" id="page1">
             <div class="front-page">
-                <p><br><br><br><br><br>To my Sun and Stars</p>
+                <p><br><br><br><br><br><br>To my Sun and Stars</p>
                 <label class="next" for="checkbox-page1"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
@@ -45,8 +45,9 @@
         <div class="page" id="page2">
             <div class="front-page">
                 <h2>Feb 14, 2025</h2>
-                <p>Happy Valentines Day Babo!! <br> <br>
-                By the time you're reading this, I probably finished the website but currently, I am nowhere done in finishing this WAAAAAAAA. I am lucky enough to spend my first Valentine Day with you.</p>
+                <p><br>Happy Valentines Day Babo!! <br> <br>
+               By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony.
+                <br><br>Would you be surprised that you are the first person that I officially spent Valentine's with? It is also my first time asking someone to be my Valentine. Maybe not because I told you I wasn't with anyone officially before you. </p>
                 <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
