--- a/letters.html
+++ b/letters.html
@@ -45,7 +45,7 @@
         <div class="page" id="page2">
             <div class="front-page">
                 <h2>Feb 14, 2025</h2>
-                <p><br>Happy Valentines Day Babo!! <br> <br>
+                <p>Happy Valentines Day Babo!! <br> <br>
                By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony.
                 <br><br>Would you be surprised that you are the first person that I officially spent Valentine's with? It is also my first time asking someone to be my Valentine. Maybe not because I told you I wasn't with anyone officially before you. </p>
                 <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
@@ -57,8 +57,8 @@
         </div>
         <div class="page" id="page3">
             <div class="front-page">
-                <h2>Page 3</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil magni laudantium beatae quia. Recusandae, fuga quas consectetur perferendis aperiam esse velit veniam ducimus? Quisquam consequatur perferendis quidem quia, recusandae ab!</p>
+                <p>Since my last letter, I've learned a lot about you and you learned a lot about me.   We spent a night talking about how we would find each other in every universe. I don't know if you knew but I was bawling my eyes out because I did not want to imagine a universe where we didn't find each other. That's when you reassured me and said we would find each other.
+                <br><br>I really want to build a statue in remembrance of us when we leave this Earth, so that future generations would look at the statue in envy and talk amongst themselves how we loved each other so deeply. When we cease to exist, our love would still be alive, flourishing and abundant. </p>
             </div>
         </div>
         <div class="back-cover"></div>
