--- a/letters.html
+++ b/letters.html
@@ -62,6 +62,91 @@
             </div>
         </div>
         <div class="back-cover"></div>
+         <div class="page" id="page4">
+            <div class="front-page">
+                <h2>Feb 14, 2025</h2>
+                <p>Happy Valentines Day Babo!! <br> <br>
+               By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony.
+                <br><br>Would you be surprised that you are the first person that I officially spent Valentine's with? It is also my first time asking someone to be my Valentine. Maybe not because I told you I wasn't with anyone officially before you. </p>
+                <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
+            </div>
+            <div class="back-page">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
+                <label class="prev" for="checkbox-page2"><i class="fas fa-chevron-left"></i></label>
+            </div>
+        </div> <div class="page" id="page5">
+            <div class="front-page">
+                <h2>Feb 14, 2025</h2>
+                <p>Happy Valentines Day Babo!! <br> <br>
+               By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony.
+                <br><br>Would you be surprised that you are the first person that I officially spent Valentine's with? It is also my first time asking someone to be my Valentine. Maybe not because I told you I wasn't with anyone officially before you. </p>
+                <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
+            </div>
+            <div class="back-page">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
+                <label class="prev" for="checkbox-page2"><i class="fas fa-chevron-left"></i></label>
+            </div>
+        </div> <div class="page" id="page6">
+            <div class="front-page">
+                <h2>Feb 14, 2025</h2>
+                <p>Happy Valentines Day Babo!! <br> <br>
+               By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony.
+                <br><br>Would you be surprised that you are the first person that I officially spent Valentine's with? It is also my first time asking someone to be my Valentine. Maybe not because I told you I wasn't with anyone officially before you. </p>
+                <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
+            </div>
+            <div class="back-page">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
+                <label class="prev" for="checkbox-page2"><i class="fas fa-chevron-left"></i></label>
+            </div>
+        </div> <div class="page" id="page7">
+            <div class="front-page">
+                <h2>Feb 14, 2025</h2>
+                <p>Happy Valentines Day Babo!! <br> <br>
+               By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony.
+                <br><br>Would you be surprised that you are the first person that I officially spent Valentine's with? It is also my first time asking someone to be my Valentine. Maybe not because I told you I wasn't with anyone officially before you. </p>
+                <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
+            </div>
+            <div class="back-page">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
+                <label class="prev" for="checkbox-page2"><i class="fas fa-chevron-left"></i></label>
+            </div>
+        </div> <div class="page" id="page8">
+            <div class="front-page">
+                <h2>Feb 14, 2025</h2>
+                <p>Happy Valentines Day Babo!! <br> <br>
+               By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony.
+                <br><br>Would you be surprised that you are the first person that I officially spent Valentine's with? It is also my first time asking someone to be my Valentine. Maybe not because I told you I wasn't with anyone officially before you. </p>
+                <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
+            </div>
+            <div class="back-page">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
+                <label class="prev" for="checkbox-page2"><i class="fas fa-chevron-left"></i></label>
+            </div>
+        </div> <div class="page" id="page9">
+            <div class="front-page">
+                <h2>Feb 14, 2025</h2>
+                <p>Happy Valentines Day Babo!! <br> <br>
+               By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony.
+                <br><br>Would you be surprised that you are the first person that I officially spent Valentine's with? It is also my first time asking someone to be my Valentine. Maybe not because I told you I wasn't with anyone officially before you. </p>
+                <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
+            </div>
+            <div class="back-page">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
+                <label class="prev" for="checkbox-page2"><i class="fas fa-chevron-left"></i></label>
+            </div>
+        </div> <div class="page" id="page10">
+            <div class="front-page">
+                <h2>Feb 14, 2025</h2>
+                <p>Happy Valentines Day Babo!! <br> <br>
+               By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony.
+                <br><br>Would you be surprised that you are the first person that I officially spent Valentine's with? It is also my first time asking someone to be my Valentine. Maybe not because I told you I wasn't with anyone officially before you. </p>
+                <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
+            </div>
+            <div class="back-page">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
+                <label class="prev" for="checkbox-page2"><i class="fas fa-chevron-left"></i></label>
+            </div>
+        </div>
     </div>
         <script src="heartrain.js"></script>
 </body>
