--- a/letters.html
+++ b/letters.html
@@ -59,6 +59,7 @@
             <div class="front-page">
                 <p>Since my last letter, I've learned a lot about you and you learned a lot about me.   We spent a night talking about how we would find each other in every universe. I don't know if you knew but I was bawling my eyes out because I did not want to imagine a universe where we didn't find each other. That's when you reassured me and said we would find each other.
                 <</p>
+                <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
             </div>
         </div>
         <div class="back-cover"></div>
