--- a/letters.html
+++ b/letters.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book</title>
+    <title>Memories</title>
     <link rel="stylesheet" href="letters.css">
     <script src="https://kit.fontawesome.com/1cad54f882.js"
         crossorigin="anonymous"></script>
@@ -34,7 +34,7 @@
         </div>
         <div class="page" id="page1">
             <div class="front-page">
-                <p><br><br><br><br><br><br>To my Sun and Stars</p>
+                <p><br><br><br><br><br><br>To My Sun and Stars</p>
                 <label class="next" for="checkbox-page1"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
@@ -58,21 +58,11 @@
         <div class="page" id="page3">
             <div class="front-page">
                 <p>before you. <br><br>
-                    Since my last letter, I've learned a lot about you and you learned a lot about me.   We spent a night talking about how we would find each other in every universe. I don't know if you knew but I was bawling my eyes out because I did not want to imagine a universe where we didn't find each other. That's when you reassured me and said we would find each other.
-                </p>
-                <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
+                    Since my last letter, I've learned a lot about you and you learned a lot about me.   We spent a night talking about how we would find each other in every universe. I don't know if you knew but I was bawling my eyes out because I did not want to imagine a universe where we didn't find each other. That's when you reassured me and said we would find each other.</p>
             </div>
         </div>
-        <div class="page" id="page4">
-            <div class="front-page">
-                <p>That's when you reassured me and said we would find each other.<br><br>
-I really want to build a statue in remembrance of us when we leave this Earth, so that future generations would look at the statue in envy and talk amongst themselves how we loved each other so deeply. When we cease to exist, our love would still be alive, flourishing and abundant.
-                </p>
-                <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
         <div class="back-cover"></div>
-        </div>
     </div>
-        <script src="heartrain.js"></script>
 </body>
 
 
