--- a/letters.html
+++ b/letters.html
@@ -62,10 +62,9 @@
             </div>
         </div>
         <div class="back-cover"></div>
+        </div>
     </div>
+
     <script src="heartrain.js"></script>
-</body>
-
-
 </body>
 </html>
