--- a/letters.html
+++ b/letters.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memories</title>
     <link rel="stylesheet" href="letters.css">
-    <script src="https://kit.fontawesome.com/1cad54f882.js"
-        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1cad54f882.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -46,8 +45,7 @@
         <div class="page" id="page2">
             <div class="front-page">
                 <h2>Feb 14, 2025</h2>
-                <p>Happy Valentines Day Babo!! <br> <br>
-                By the time you're reading this, I have completed this, but right now, I am less than 20% done...</p>
+                <p>Happy Valentines Day Babo!! <br><br> By the time you're reading this, I have completed this...</p>
                 <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
@@ -58,18 +56,15 @@
 
         <div class="page" id="page3">
             <div class="front-page">
-                <p>before you. <br><br>
-                    Since my last letter, I've learned a lot about you and you learned a lot about me.   We spent a night talking about how we would find each other in every universe. I don't know if you knew but I was bawling my eyes out because I did not want to imagine a universe where we didn't find each other. That's when you reassured me and said we would find each other.
-<br><br> I really want to build a statue in remembrance of us when we leave this Earth, </p>
-                <label class="next" for="checkbox-page3"><i class="fas fa-chevron-right"></i></label>
-                 </div>
+                <p>before you. <br><br> Since my last letter, I've learned a lot about you and you learned a lot about me. We spent a night talking about how we would find each other in every universe. I don't know if you knew but I was bawling my eyes out because I did not want to imagine a universe where we didn't find each other. That's when you reassured me and said we would find each other.</p>
+            </div>
             <div class="back-page">
                 <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
                 <label class="prev" for="checkbox-page3"><i class="fas fa-chevron-left"></i></label>
             </div>
         </div>
 
-        <!-- New Page 4 -->
+        <!-- New Page 4 with your exact message -->
         <div class="page" id="page4">
             <div class="front-page">
                 <p>so that future generations would look at the statue in envy and talk amongst themselves how we loved each other so deeply. When we cease to exist, our love would still be alive, flourishing and abundant.</p>
