--- a/letters.html
+++ b/letters.html
@@ -45,7 +45,8 @@
         <div class="page" id="page2">
             <div class="front-page">
                 <h2>Feb 14, 2025</h2>
-                <p>Happy Valentines Day Babo!! <br><br> By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony</p>
+                <p>Happy Valentines Day Babo!! <br><br> By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony<br><br>
+                Would you be surprised that you are the first person that I officially spent Valentine's with? </p>
                 <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
@@ -56,7 +57,7 @@
 
         <div class="page" id="page3">
             <div class="front-page">
-                <p>Would you be surprised that you are the first person that I officially spent Valentine's with? It is also my first time asking someone to be my Valentine. Maybe not because</p>
+                <p>It is also my first time asking someone to be my Valentine. Maybe not because</p>
             </div>
             <div class="back-page">
                 <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
