--- a/letters.html
+++ b/letters.html
@@ -20,17 +20,21 @@
         </nav>
     </header>
 
+    <!-- Checkbox inputs for controlling page navigation -->
     <input type="checkbox" id="checkbox-cover">
     <input type="checkbox" id="checkbox-page1">
     <input type="checkbox" id="checkbox-page2">
     <input type="checkbox" id="checkbox-page3">
-    <input type="checkbox" id="checkbox-page4"> <!-- New checkbox for page4 -->
-
+    <input type="checkbox" id="checkbox-page4">
+    <input type="checkbox" id="checkbox-page5">
+    <input type="checkbox" id="checkbox-page6">
+    <input type="checkbox" id="checkbox-page7">
     <div class="book">
         <div class="cover">
             <label for="checkbox-cover"></label>
         </div>
 
+        <!-- Page 1 -->
         <div class="page" id="page1">
             <div class="front-page">
                 <p><br><br><br><br><br><br>To My Sun and Stars</p>
@@ -42,11 +46,11 @@
             </div>
         </div>
 
+        <!-- Page 2 -->
         <div class="page" id="page2">
             <div class="front-page">
                 <h2>Feb 14, 2025</h2>
-                <p>Happy Valentines Day Babo!! <br><br> By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony<br><br>
-                Would you be surprised that you are the first person that I officially spent Valentine's with? </p>
+                <p>Happy Valentines Day Babo!! <br><br> By the time you're reading this...</p>
                 <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
@@ -55,9 +59,11 @@
             </div>
         </div>
 
+        <!-- Page 3 -->
         <div class="page" id="page3">
             <div class="front-page">
-                <p>It is also my first time asking someone to be my Valentine. Maybe not because</p>
+                <p>before you. <br><br> Since my last letter...</p>
+                <label class="next" for="checkbox-page3"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
                 <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
@@ -65,15 +71,53 @@
             </div>
         </div>
 
-        <!-- New Page 4 with your exact message -->
+        <!-- Page 4 -->
         <div class="page" id="page4">
             <div class="front-page">
-                <p>I told you I wasn't with anyone officially before you. </p>
+                <p>so that future generations would look...</p>
                 <label class="next" for="checkbox-page4"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
-                <img src="https://example.com/your-image.jpg" alt="Image for page 4">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
                 <label class="prev" for="checkbox-page4"><i class="fas fa-chevron-left"></i></label>
+            </div>
+        </div>
+
+        <!-- Page 5 -->
+        <div class="page" id="page5">
+            <div class="front-page">
+                <p>Page 5 content...</p>
+                <label class="next" for="checkbox-page5"><i class="fas fa-chevron-right"></i></label>
+            </div>
+            <div class="back-page">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
+                <label class="prev" for="checkbox-page5"><i class="fas fa-chevron-left"></i></label>
+            </div>
+        </div>
+
+        <!-- Page 6 -->
+        <div class="page" id="page6">
+            <div class="front-page">
+                <p>Page 6 content...</p>
+                <label class="next" for="checkbox-page6"><i class="fas fa-chevron-right"></i></label>
+            </div>
+            <div class="back-page">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
+                <label class="prev" for="checkbox-page6"><i class="fas fa-chevron-left"></i></label>
+            </div>
+        </div>
+
+        <!-- Continue adding more pages (Page 7, Page 8, etc.) -->
+
+        <!-- Page 52 -->
+        <div class="page" id="page7">
+            <div class="front-page">
+                <p>Page 52 content...</p>
+                <label class="next" for="checkbox-page7"><i class="fas fa-chevron-right"></i></label>
+            </div>
+            <div class="back-page">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/valentine1.jpg?raw=true">
+                <label class="prev" for="checkbox-page7"><i class="fas fa-chevron-left"></i></label>
             </div>
         </div>
 
