--- a/letters.html
+++ b/letters.html
@@ -29,7 +29,6 @@
     <input type="checkbox" id="checkbox-page5">
     <input type="checkbox" id="checkbox-page6">
     <input type="checkbox" id="checkbox-page7">
-    
     <div class="book">
         <div class="cover">
             <label for="checkbox-cover"></label>
@@ -108,10 +107,12 @@
             </div>
         </div>
 
-        <!-- Page 7 -->
+        <!-- Continue adding more pages (Page 7, Page 8, etc.) -->
+
+        <!-- Page 52 -->
         <div class="page" id="page7">
             <div class="front-page">
-                <p>Page 7 content...</p>
+                <p>Page 52 content...</p>
                 <label class="next" for="checkbox-page7"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
