--- a/letters.html
+++ b/letters.html
@@ -50,7 +50,8 @@
         <div class="page" id="page2">
             <div class="front-page">
                 <h2>Feb 14, 2025</h2>
-                <p><br>Happy Valentine's Day! By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony. <br><br> Would you be surprised that you are the first person that I officially spent Valentine's with? It is also my first time asking someone to be my Valentine. Maybe not because I told you I wasn't with anyone officially before you. </p>
+                <p><br>Happy Valentine's Day! By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony. <br><br> Would you be surprised that you are the first person that I officially spent Valentine's with? It is also my first time asking someone to be my Valentine. Maybe not because I told you I wasn't with anyone officially before you. 
+                <br><br> Since my last letter, I've learned a lot about you and you learned a lot about me.   We spent a night talking about how we would find each other in every universe. I don't know if you knew but I was bawling my eyes out because I did not want to imagine a universe where we didn't find each other. That's when you reassured me and said we would find each other.</p>
                 <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
