--- a/letters.html
+++ b/letters.html
@@ -63,7 +63,8 @@
         <!-- Page 3 -->
         <div class="page" id="page3">
             <div class="front-page">
-                <p>before you. <br><br> Since my last letter...</p>
+                <p>I really want to build a statue in remembrance of us when we leave this Earth, so that future generations would look at the statue in envy and talk amongst themselves how we loved each other so deeply. When we cease to exist, our love would still be alive, flourishing and abundant.<br><br>
+                Right now, you're progressing through college and I cannot express how happy I am for you. I remember the day when you got into your car after talking to your advisor, smiling from ear to ear and thanking me a lot for pushing you forward. In reality, you were the one who pushed yourself, I was just in the sidelines cheering you on. I am so so proud of you for taking that step even when you know you're afraid.</p>
                 <label class="next" for="checkbox-page3"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
