--- a/letters.html
+++ b/letters.html
@@ -51,7 +51,7 @@
             <div class="front-page">
                 <h2>Feb 14, 2025</h2>
                 <p><br>Happy Valentine's Day! By the time you're reading this, I have completed this, but right now, I am less than 20% done. I know this letter was very short so I hope my love for you will be conveyed in the upcoming testimony. <br><br> Would you be surprised that you are the first person that I officially spent Valentine's with? It is also my first time asking someone to be my Valentine. Maybe not because I told you I wasn't with anyone officially before you. 
-                <br><br> Since my last letter, I've learned a lot about you and you learned a lot about me.   We spent a night talking about how we would find each other in every universe. I don't know if you knew but I was bawling my eyes out because I did not want to imagine a universe where we didn't find each other. That's when you reassured me and said we would find each other.</p>
+                <br><br> Since my last letter, I've learned a lot about you and you learned a lot about me.   We spent a night talking about how we would find each other in every universe. I don't know if you knew but I was bawling my eyes out</p>
                 <label class="next" for="checkbox-page2"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
@@ -63,7 +63,7 @@
         <!-- Page 3 -->
         <div class="page" id="page3">
             <div class="front-page">
-                <p>I really want to build a statue in remembrance of us when we leave this Earth, so that future generations would look at the statue in envy and talk amongst themselves how we loved each other so deeply. When we cease to exist, our love would still be alive, flourishing and abundant.<br><br>
+                <p>because I did not want to imagine a universe where we didn't find each other. That's when you reassured me and said we would find each other.<br><br>I really want to build a statue in remembrance of us when we leave this Earth, so that future generations would look at the statue in envy and talk amongst themselves how we loved each other so deeply. When we cease to exist, our love would still be alive, flourishing and abundant.<br><br>
                 Right now, you're progressing through college and I cannot express how happy I am for you. I remember the day when you got into your car after talking to your advisor, smiling from ear to ear and thanking me a lot for pushing you forward. In reality, you were the one who pushed yourself, I was just in the sidelines cheering you on. I am so so proud of you for taking that step even when you know you're afraid.</p>
                 <label class="next" for="checkbox-page3"><i class="fas fa-chevron-right"></i></label>
             </div>
