--- a/letters.html
+++ b/letters.html
@@ -64,7 +64,7 @@
         <div class="page" id="page3">
             <div class="front-page">
                 <p>because I did not want to imagine a universe where we didn't find each other. That's when you reassured me and said we would find each other.<br><br>I really want to build a statue in remembrance of us when we leave this Earth, so that future generations would look at the statue in envy and talk amongst themselves how we loved each other so deeply. When we cease to exist, our love would still be alive, flourishing and abundant.<br><br>
-                Right now, you're progressing through college and I cannot express how happy I am for you. I remember the day when you got into your car after talking to your advisor, smiling from ear to ear and thanking me a lot for pushing you forward. In reality, you were the one who pushed yourself, I was just in the sidelines cheering you on. I am so so proud of you for taking that step even when you know you're afraid.</p>
+                Right now, you're progressing through college and I cannot express how happy I am for you. I remember the day when you got into your car after talking to your advisor, smiling from ear to ear and thanking me a lot for pushing you forward. In reality, you were the one who </p>
                 <label class="next" for="checkbox-page3"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
@@ -76,7 +76,10 @@
         <!-- Page 4 -->
         <div class="page" id="page4">
             <div class="front-page">
-                <p>so that future generations would look...</p>
+                <p> pushed yourself, I was just in the sidelines cheering you on. I am so so proud of you for taking that step even when you know you're afraid.
+                <br><br> 
+On this day of love and every future day beyond us, I am glad that I met you. I probably said it a lot in my previous letters but it's true. You changed me in ways where I didn't even know I could change. You already knew that before I met you, I was never the type of person to coquettishly call someone by pet names. However, with you, I love to call you that until my breath stops. I never felt so safe and comfortable with a person before I met you. You are deserving of all the love from me. I love you Babo. Levi, Kaia, Buddy, and Rascal will grow up in a home where their parents will always be teenagers in love.
+                <br><br> Thank you for being yourself and being here with me. </p>
                 <label class="next" for="checkbox-page4"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
