--- a/letters.html
+++ b/letters.html
@@ -78,8 +78,8 @@
             <div class="front-page">
                 <p> pushed yourself, I was just in the sidelines cheering you on. I am so so proud of you for taking that step even when you know you're afraid.
                 <br><br> 
-On this day of love and every future day beyond us, I am glad that I met you. I probably said it a lot in my previous letters but it's true. You changed me in ways where I didn't even know I could change. You already knew that before I met you, I was never the type of person to coquettishly call someone by pet names. However, with you, I love to call you that until my breath stops. I never felt so safe and comfortable with a person before I met you. You are deserving of all the love from me. I love you Babo. Levi, Kaia, Buddy, and Rascal will grow up in a home where their parents will always be teenagers in love.
-                <br><br> Thank you for being yourself and being here with me. </p>
+On this day of love and every future day beyond us, I am glad that I met you. You changed me in ways where I didn't even know I could change. You already knew I was never the type of person to coquettishly call someone by pet names. However, with you, I love to call you that until my breath stops. I never felt so safe and comfortable with a person before I met you. You are deserving of all the love from me. I love you Babo. Levi, Kaia, Buddy, and Rascal will grow up in a home where their parents will always be teenagers in love.
+                <br><br> Thank you for being yourself and being here with me. <br><br> Love, your soulmate </p>
                 <label class="next" for="checkbox-page4"><i class="fas fa-chevron-right"></i></label>
             </div>
             <div class="back-page">
