--- a/memories.html
+++ b/memories.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="memories.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
     />
   </head>
   <body>
+       <header>
+        <nav>
+            <a href="home.html">Home</a>
+            <a href="letters.html">Letters</a>
+            <a href="memories.html" class="active">Memories</a>
+            <a href="">Timeline</a>
+            <a href="">Our Home</a>
+            <a href="">Open When</a>
+        </nav>
     <div class="section-container">
       <section>
         <div class="section-heading">
