--- a/letters.html
+++ b/letters.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="home.html">Home</a>
             <a href="letters.html" class="active">Letters</a>
-            <a href="">Memories</a>
+            <a href="memories.html">Memories</a>
             <a href="">Timeline</a>
             <a href="">Our Home</a>
             <a href="">Open When</a>
