--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="home.html" class="active">Home</a>
             <a href="letters.html">Letter</a>
-            <a href="">Memories</a>
+            <a href="memories.html">Memories</a>
             <a href="">Timeline</a>
             <a href="">Our Home</a>
             <a href="">Open When</a>
