--- a/memories.html
+++ b/memories.html
@@ -11,15 +11,19 @@
     />
   </head>
   <body>
-       <header>
-        <nav>
-            <a href="home.html">Home</a>
-            <a href="letters.html">Letters</a>
-            <a href="memories.html" class="active">Memories</a>
-            <a href="">Timeline</a>
-            <a href="">Our Home</a>
-            <a href="">Open When</a>
-        </nav>
+    <!-- Header with navigation bar -->
+    <header>
+      <nav>
+        <a href="home.html">Home</a>
+        <a href="letters.html">Letters</a>
+        <a href="memories.html" class="active">Memories</a>
+        <a href="">Timeline</a>
+        <a href="">Our Home</a>
+        <a href="">Open When</a>
+      </nav>
+    </header>
+
+    <!-- Main content container -->
     <div class="section-container">
       <section>
         <div class="section-heading">
@@ -74,7 +78,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-
     <script>
       AOS.init();
     </script>
