--- a/memories.html
+++ b/memories.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Memories</title>
     <link rel="stylesheet" href="memories.css" />
     <link
       rel="stylesheet"
@@ -27,11 +27,27 @@
     <div class="section-container">
       <section>
         <div class="section-heading">
-          <h2 data-aos="fade-left" data-aos-duration="1000">The Heading 1</h2>
+          <h2 data-aos="fade-left" data-aos-duration="1000">Things I Love About You</h2>
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-          accusamus!
+          Your cute fear of scary games<br>
+Your determination to achieve your goals <br>
+Your silliness and jokes<br>
+Your fake overconfidence<br>
+Your fake smugness around me<br>
+Your determination to get everything right<br>
+Your openness<br>
+Your ability to communicate<br>
+Your affection<br>
+Your possessiveness<br>
+Your diligence<br>
+Your support for your friends<br>
+Your high sexual drive<br>
+Your clinginess<br>
+Your cuteness<br>
+Your smile<br>
+Your kisses<br>
+Whenever you say babo <br>
         </p>
         <img
           data-aos="fade-right"
@@ -44,11 +60,20 @@
 
       <section>
         <div class="section-heading">
-          <h2 data-aos="fade-up" data-aos-duration="1000">The Heading 2</h2>
+          <h2 data-aos="fade-up" data-aos-duration="1000">Memorable Events</h2>
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-          accusamus!
+          When we played Palworld when we first met <br>
+When I killed you in It Takes Two (sorry babo, im just that good!!) <br>
+When I wheezed at "UH-HUH" while playing the bomb game<br>
+When I got you into playing Minesweeper and Sudoke <br>
+When we got addicted to Candy Crush <br>
+When you introduced the "Light-Heavy Rain" and argued over it <br>
+When I yelled "SHUT UPPPP" to you<br>
+When you completed your course registration<br>
+When I help you with proofreading<br>
+"Wait Luca have a drinking problem? Oh wait, hes European"<br>
+When you got terrified at the baby starfish moving
         </p>
         <img
           data-aos="fade"
