--- a/memories.html
+++ b/memories.html
@@ -79,7 +79,7 @@ When you got terrified at the baby starfish moving
           data-aos="fade"
           data-aos-duration="1500"
           data-aos-delay="200"
-          src="images/image2.jpg"
+          src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/memories.jpg?raw=true"
           alt=""
         />
       </section>
