--- a/letters.html
+++ b/letters.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <a href="home.html">Home</a>
-            <a href="letters.html" class="active">Letters</a>
+            <a href="letters.html" class="active">Letter</a>
             <a href="memories.html">Memories</a>
             <a href="">Timeline</a>
             <a href="">Our Home</a>
