--- a/memories.html
+++ b/memories.html
@@ -15,7 +15,7 @@
     <header>
       <nav>
         <a href="home.html">Home</a>
-        <a href="letters.html">Letters</a>
+        <a href="letters.html">Letter</a>
         <a href="memories.html" class="active">Memories</a>
         <a href="">Timeline</a>
         <a href="">Our Home</a>
